add Box Content

--- a/src/pages/about-us.css
+++ b/src/pages/about-us.css
@@ -295,6 +295,7 @@ button, input, select, textarea {
 
 .calculator-loan ul {
     margin: 0;
+    padding-left: 0px;
 }
 
 .loan-page ul li input[type="text"], .loan-page ul li select {
