--- a/src/components/base.css
+++ b/src/components/base.css
@@ -52,7 +52,8 @@ a {
  * article grid
  */
 .article-list {
-  margin: 0;
+  /* margin: 0; */
+  margin-bottom: 40px;
   padding: 0;
   list-style: none;
   display: grid;
